--- a/app/memreas/css/transtyle.css
+++ b/app/memreas/css/transtyle.css
@@ -46,12 +46,12 @@ ul.edit-area-scroll{ height: 270px; }
 @media screen and (max-width: 900px){
     #tabs-memreas a{ padding: .4em 2em; }
 }
-@media screen and (min-width:700px) and (max-width: 760px){
+/*@media screen and (min-width:700px) and (max-width: 760px){
     #maintab-content .span9:first-child{
         width: 66%;
         margin-left: 7%;
     }
-}
+}*/
 .notify-box a.btn{
     padding: 2px 20px;
     background: #A9C1EC;
@@ -123,8 +123,9 @@ li.working-upload .progress-text{
 
 .aviary-edit-wrapper{
     height: 120px; position: relative;
-    width: 90%;
+    width: 85%;
     margin: 0 auto;
+    float:right;
 }
 .avpw_tool_pager .avpw_clip{
 	min-width:80px;
@@ -358,7 +359,7 @@ input[name="account_repassword"]{ width: 42%; margin-right: 10px; float: left; }
     -webkit-box-shadow: none !important;
 }
 .avpw_is_embed #avpw_controls{
-    left: 41px !important;
+    left: 0px !important;
 }
 /*
 #avpw_controls{
@@ -415,7 +416,25 @@ input[name="account_repassword"]{ width: 42%; margin-right: 10px; float: left; }
         margin: 0 auto;
     }
 }
-
+/*@media (max-width: 414px){  
+	#avpw_save_button, #avpw_apply_container{
+		display: inline-block !important;
+	    font-size: 14px !important;
+	    height: auto !important;
+	    line-height: 50% !important;
+	    margin: -20px -5px 0;
+	    padding: 15px 5px !important;
+	    text-align: center;
+	    width:auto;
+	}
+	.avpw_mode_action_left:after, .avpw_mode_action_right:before, .avpw_tool_pager .avpw_scroll_rule{
+		height:auto !Important;
+	}
+	.carousel-area-aviary{float:none;}
+	.aviary-edit-wrapper,.carousel-area-aviary{
+		width: 100%;
+	}
+}*/
 /*.avpw_prev { *//* This sets left arrow when effects are not selected */
     /*left: 120px !important;*/
 /*}*/
@@ -499,3 +518,109 @@ input[name="account_repassword"]{ width: 42%; margin-right: 10px; float: left; }
         height: 334px;
     }
 }*/
+#avpw_tool_main_container, #avpw_tool_options_container{
+	padding-left: 119px !important;
+    padding-right: 119px !important;
+    position: relative !important; width: auto !important;
+}
+.avpw_tool_fixed{
+	left: 0 !important;margin-left:0px !important; max-width: 100% !important;margin-top: 0 !important;top: 0 !important;
+}
+/*#avpw_tool_container{
+	max-width: 64% !important; min-width: 0 !important;right: 0 !important; top: 0 !important;left: 18% !important;
+}*/
+#avpw_tool_container{
+	min-width: 0 !important;right: 0 !important; top: 0 !important;left: 0 !important; max-width: 100% !important;position:relative !important;
+}
+.avpw_tool_cutout_centered_orientation{
+    height: 64px !important;
+    left: 0 !important;
+    margin-left: 0 !important;
+    margin-top: -32px !important;
+    max-width: 100% !important;
+    position: absolute !important;
+    text-align: center !important;
+    top: 50% !important;
+}
+#avpw_controlpanel_crop{
+	    min-width: 0 !important;
+}
+.avpw_tool_scroll .avpw_clip{
+		max-width: 100% !important;
+	
+}
+.avpw_tool_cutout_centered_resize{
+	 left: 0 !important;
+    margin-left: 0 !important;
+    margin-top: -31px !important;
+    max-width: 100% !important;
+    position: absolute !important;
+    top: 50% !important;
+}
+.avpw_resize_form_block{
+	 width: 40% !important;
+}
+.avpw .avpw_number_input{
+	max-width: 90% !important;
+    padding: 7px 5% !important;
+}
+.avpw_resize_constrain{
+	width: 20% !important;
+}
+@media (max-width:800px){
+	#avpw_colorsplash_brushes,#avpw_drawing_brushes{margin-top:0px;}
+	.avpw_inset_button_label{display:none !Important;}
+	.avpw_inset_button_first, .avpw_inset_button_last{
+		width: 76px !important;
+	}
+	.avpw_inset_button{
+		width: 76px !important;
+	}
+	.avpw_inset_group_spacer,.avpw_inset_group_mini_spacer{display:none !important;}
+	#avpw_font_browser{left:35px !important;}
+	.avpw_inset_button_mini{
+		width: 51px !important;
+	}
+	.avpw_outer-center{float:left !important;}
+}
+#avpw_controlpanel_colorsplash .avpw_outer-center{
+	 margin-top: 0 !important;
+}
+.avpw_tool_cutout_centered_drawing{
+	left: 0 !important;
+    margin-left: 0 !important;
+    margin-top: 0 !important;
+    max-width: 100% !important;
+    top: 0 !important;
+}
+.avpw_outer-center{
+    left: 0 !important;
+    top: 10px !important;
+    position: relative !important;
+    right:auto  !important;
+    margintop: 0px !important;
+}
+.avpw_inner-center {
+    position: relative !important;
+    right: 0 !important;
+}
+.avpw_is_embed .avpw_inset_color_widget .avpw_inset_button{
+	 margin-left: 0 !important;
+}
+.avpw_inset_group{
+	 margin-left: 5px !important;
+}
+.avpw_checkmark_button, .avpw_checkmark_button .avpw_inset_button{
+	left: 50% !important;
+    margin-left: -28px !important;
+    margin-top: -20px !important;
+    top: 50% !important;
+}
+#avpw_controlpanel_textwithfont .avpw_outer-center,#avpw_controlpanel_textwithfont .avpw_inner-center{
+	width:100% !important;
+}
+.avpw_tool_cutout_centered_spot_tool{
+	left: 0px !important;
+    width: 100% !important;
+    max-width: 100% !important;margin-left: 0 !important;
+}
